--- a/front_end/style.css
+++ b/front_end/style.css
@@ -1,16 +1,52 @@
-#parent {
+body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #2c3e50;
+}
+
+header {
+    background-color: #c0392b;
+    color: #2c3e50;
+    height: 120px;
+    width: 100%;
+    margin: -20px 0 20px 0;
+}
+
+.parent {
     display: flex;
     flex-flow: wrap row;
     justify-content: space-around;
 }
 
 .produit {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    flex-direction: column;
     border: solid 2px;
     height: 400px;
     width: 400px;
     margin: 20px;
+    transition: all 300ms ease-in-out;
+    border-radius: 10%;
+}
+
+.produit:hover {
+    scale: 1.1;
 }
 
 .img_product {
-    height: 150px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    object-fit: cover;
+    border-radius: 10%;
+}
+
+footer {
+    color: #2c3e50;
+    background-color: #c0392b;
 }
