--- a/front_end/style.css
+++ b/front_end/style.css
@@ -12,7 +12,9 @@ header {
     color: #2c3e50;
     height: 120px;
     width: 100%;
-    margin: -20px 0 20px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .parent {
