--- a/front_end/panier.css
+++ b/front_end/panier.css
@@ -41,3 +41,11 @@ header {
     justify-content: space-between;
     margin: 20px 10% 20px 10%;
 }
+
+.formulaire {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.5rem;
+}
