--- a/front_end/confirmation.css
+++ b/front_end/confirmation.css
@@ -46,8 +46,6 @@ header {
 footer {
     background: linear-gradient(200deg, #f368e0, #5f27cd);
     color: #f5f6fa;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
+    height: 100px;
     box-shadow: 0 -1rem 1rem #dcdde1;
 }
