--- a/front_end/panier.css
+++ b/front_end/panier.css
@@ -82,6 +82,8 @@ footer {
     width: 100%;
     box-shadow: 0 -1rem 1rem #dcdde1;
     height: 100px;
+    position: relative;
+    bottom: 0px;
 }
 
 .erreur {
