--- a/front_end/article.css
+++ b/front_end/article.css
@@ -1,5 +1,9 @@
 body {
+    height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 a {
@@ -16,6 +20,11 @@ header {
     align-items: center;
     box-shadow: 0 1rem 1rem #dcdde1;
     margin-bottom: 50px;
+}
+
+section {
+    height: 100%;
+    padding: 1rem;
 }
 
 .carte {
@@ -57,13 +66,4 @@ header {
 .button {
     margin-top: 30px;
     width: 100px;
-}
-
-footer {
-    background: linear-gradient(200deg, #f368e0, #5f27cd);
-    color: #f5f6fa;
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    box-shadow: 0 -1rem 1rem #dcdde1;
 }
