--- a/front_end/confirmation.css
+++ b/front_end/confirmation.css
@@ -1,5 +1,13 @@
 body {
+    height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
 }
 
 header {
@@ -11,6 +19,27 @@ header {
     justify-content: space-around;
     align-items: center;
     box-shadow: 0 1rem 1rem #dcdde1;
+    margin-bottom: 50px;
+}
+
+.panier {
+    color: #f5f6fa;
+    display: flex;
+    align-items: center;
+}
+
+.cart {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1.5rem;
+    color: #2c3e50;
+    margin-left: 10px;
+}
+
+#body {
+    height: 100%;
 }
 
 .title__panier {
@@ -37,15 +66,12 @@ header {
     margin-right: 10px;
 }
 
+.title {
+    text-align: start;
+}
+
 .total {
     display: flex;
     justify-content: space-between;
     margin: 20px 10% 20px 10%;
-}
-
-footer {
-    background: linear-gradient(200deg, #f368e0, #5f27cd);
-    color: #f5f6fa;
-    height: 100px;
-    box-shadow: 0 -1rem 1rem #dcdde1;
 }
