--- a/front_end/sass/layout/_header.scss
+++ b/front_end/sass/layout/_header.scss
@@ -1,4 +1,4 @@
-header {
+.header {
     background: linear-gradient(200deg, #f368e0, #5f27cd);
     color: #f5f6fa;
     height: 120px;
@@ -7,5 +7,5 @@ header {
     justify-content: space-around;
     align-items: center;
     box-shadow: 0 1rem 1rem #dcdde1;
-    margin-bottom: 50px;
+    margin-bottom: 2rem;
 }
