--- a/front_end/article.css
+++ b/front_end/article.css
@@ -10,18 +10,6 @@ a {
     text-decoration: none;
 }
 
-header {
-    background: linear-gradient(200deg, #f368e0, #5f27cd);
-    color: #f5f6fa;
-    height: 120px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0 1rem 1rem #dcdde1;
-    margin-bottom: 50px;
-}
-
 section {
     height: 100%;
     padding: 1rem;
@@ -32,6 +20,10 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+}
+
+.home {
+    color: #f5f6fa;
 }
 
 .panier {
@@ -47,7 +39,8 @@ section {
 }
 
 .img_choix {
-    width: 50%;
+    max-width: 80%;
+    max-height: 400px;
     border-radius: 20px;
 }
 
@@ -66,4 +59,18 @@ section {
 .button {
     margin-top: 30px;
     width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    background: linear-gradient(200deg, #f368e0, #5f27cd);
+    color: #f5f6fa;
+    font-size: 1rem;
+    border: none;
+    box-shadow: 0 0 1rem #dcdde1;
+    transition: all 300ms ease-in-out;
+}
+
+.button:hover {
+    filter: brightness(1.1);
+    transform: scale(1.1);
+    box-shadow: 0 0 2rem #dcdde1;
 }
