--- a/front_end/style.css
+++ b/front_end/style.css
@@ -1,22 +1,14 @@
 body {
+    height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 a {
     text-decoration: none;
     color: #2c3e50;
-}
-
-header {
-    background: linear-gradient(200deg, #f368e0, #5f27cd);
-    color: #f5f6fa;
-    height: 120px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0 1rem 1rem #dcdde1;
-    margin-bottom: 20px;
 }
 
 .panier {
@@ -51,7 +43,9 @@ header {
 }
 
 .produit:hover {
-    filter: webkit-brightness(0.8);
+    filter: brightness(0.9);
+    transform: scale(1.05);
+    box-shadow: 0 0 2rem #dcdde1;
 }
 
 .img_product {
